--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     </string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="label">Search</string>
     <string name="action_settings">Settings</string>
     <string name="book_cover">book_cover</string>
     <string name="book_title">book_title</string>
